--- a/GeoTrackKitExample/GeoTrackKitExample/Views/LiveTracking/LiveTrackingView.storyboard
+++ b/GeoTrackKitExample/GeoTrackKitExample/Views/LiveTracking/LiveTrackingView.storyboard
@@ -10,21 +10,21 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Live Tracking View Controller-->
         <scene sceneID="tKr-l8-hIX">
             <objects>
-                <viewController storyboardIdentifier="LiveTrackView" id="MKo-pQ-XZ6" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LiveTrackView" id="MKo-pQ-XZ6" customClass="LiveTrackingViewController" customModule="GeoTrackKitExample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="raw-S7-kTm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="hybrid" translatesAutoresizingMaskIntoConstraints="NO" id="gev-ov-hTt">
-                                <rect key="frame" x="0.0" y="20" width="375" height="447"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="hybrid" showsUserLocation="YES" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gev-ov-hTt" customClass="GeoTrackMap" customModule="GeoTrackKit">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </mapView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="096-lh-ZDZ">
-                                <rect key="frame" x="0.0" y="467" width="375" height="200"/>
+                                <rect key="frame" x="0.0" y="667" width="375" height="0.0"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="KoT-O1-bcQ"/>
+                                    <constraint firstAttribute="height" id="KoT-O1-bcQ"/>
                                 </constraints>
                                 <connections>
                                     <segue destination="3Og-pV-VhC" kind="embed" id="qBe-6v-tBZ"/>
@@ -44,6 +44,9 @@
                         <viewLayoutGuide key="safeArea" id="aMm-tk-WmY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="map-location" id="wb3-oF-Cjh"/>
+                    <connections>
+                        <outlet property="liveMapView" destination="gev-ov-hTt" id="g8y-Ic-exs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e5W-TS-hXc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -54,7 +57,7 @@
             <objects>
                 <tableViewController id="3Og-pV-VhC" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="oad-Ev-DlB">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
@@ -75,7 +78,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="awp-XJ-Scr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-152" y="793"/>
+            <point key="canvasLocation" x="788" y="703"/>
         </scene>
     </scenes>
     <resources>
