--- a/GeoTrackKitExample/GeoTrackKitExample/Views/TrackImport/TrackImport.storyboard
+++ b/GeoTrackKitExample/GeoTrackKitExample/Views/TrackImport/TrackImport.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PC8-SG-klA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CfO-a3-hFj">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -32,9 +32,28 @@
                             <outlet property="delegate" destination="PC8-SG-klA" id="jT7-sU-0Y4"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="" image="import-track" id="HIx-s6-ZRn"/>
+                    <navigationItem key="navigationItem" id="b5z-g2-5rI"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wJ4-fS-gyc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1812" y="35"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="xDT-rR-fhv">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="CfO-a3-hFj" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="import-track" id="HIx-s6-ZRn"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tzS-Cw-8Ij">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="PC8-SG-klA" kind="relationship" relationship="rootViewController" id="7xL-s2-1Dm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7sT-4I-2lI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="972" y="34.632683658170919"/>
         </scene>
