--- a/GeoTrackKitExample/GeoTrackKitExample/Views/ReferenceTrack/TrackView.storyboard
+++ b/GeoTrackKitExample/GeoTrackKitExample/Views/ReferenceTrack/TrackView.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -68,8 +67,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LegSwitchCell" rowHeight="60" id="pAP-x2-ikh" customClass="LegSwitchCell" customModule="GeoTrackKitExample" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SaveTrackCell" rowHeight="60" id="5te-h1-040" customClass="SaveTrackCell" customModule="GeoTrackKitExample" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="60"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5te-h1-040" id="57j-FG-LLj">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ke-vD-HD3">
+                                            <rect key="frame" x="107.5" y="19" width="160" height="22"/>
+                                            <state key="normal" title="Save Track to HealthKit"/>
+                                            <connections>
+                                                <action selector="tappedSaveTrack:" destination="5te-h1-040" eventType="touchUpInside" id="zo1-9h-a49"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="2Ke-vD-HD3" secondAttribute="trailing" constant="8" id="fKj-vg-y1V"/>
+                                        <constraint firstItem="2Ke-vD-HD3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="57j-FG-LLj" secondAttribute="leadingMargin" constant="8" id="huH-AP-PI1"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="2Ke-vD-HD3" secondAttribute="bottom" constant="8" id="k3q-nM-cvW"/>
+                                        <constraint firstItem="2Ke-vD-HD3" firstAttribute="top" secondItem="57j-FG-LLj" secondAttribute="topMargin" constant="8" id="pX7-d9-dMI"/>
+                                        <constraint firstItem="2Ke-vD-HD3" firstAttribute="centerX" secondItem="57j-FG-LLj" secondAttribute="centerX" id="x4I-BW-OXy"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LegSwitchCell" rowHeight="60" id="pAP-x2-ikh" customClass="LegSwitchCell" customModule="GeoTrackKitExample" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="88" width="375" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pAP-x2-ikh" id="ArL-vv-iLB">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
