--- a/GeoTrackKitExample/GeoTrackKitExample/Base.lproj/Main.storyboard
+++ b/GeoTrackKitExample/GeoTrackKitExample/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,6 +18,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
+                        <segue destination="295-cY-uc9" kind="relationship" relationship="viewControllers" id="mpr-OR-5OK"/>
                         <segue destination="tBK-oR-W6E" kind="relationship" relationship="viewControllers" id="0g8-hp-Ff4"/>
                         <segue destination="OVK-Q8-tUv" kind="relationship" relationship="viewControllers" id="H0b-r1-kbD"/>
                         <segue destination="OaI-S6-tDf" kind="relationship" relationship="viewControllers" id="dcO-FC-dRU"/>
@@ -48,6 +48,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F5Y-gl-5gM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-257" y="-1258"/>
+        </scene>
+        <!--TrackList-->
+        <scene sceneID="Meu-z8-Ry5">
+            <objects>
+                <viewControllerPlaceholder storyboardName="TrackList" id="295-cY-uc9" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="2SL-dZ-w0r"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dG5-HQ-RBW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-272" y="-1568"/>
         </scene>
         <!--LiveTrackView-->
         <scene sceneID="NfS-Us-370">
